First approach to returning a response to REST client.
